# LLMFacade

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  README.md  how-to-link.txt  pyproject.toml  review.md
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/learnings/: README.md  gemma4-12b-12gb.md  llamacpp-low-vram-moe-flags.md  llamacpp-reasoning-tool-calling.md  qwen3.6-27b-12gb.md
examples/: blacksmith.py
examples/migrations/: dndplaya_agent.py  mtgai_card_gen.py  rudybrunsman_npc.py
plans/: autofit.md  homebrew-gemma4-vram-fit.md  image-generation-logging.md  image-generation.md  labeled-reference-images.md  llamacpp-dry-sampler.md  llamacpp-migration.md  llamacpp-no-mmap-mlock-knobs.md  llamacpp-thinking-control.md  llmfacade-feature-request-flash-attn.md  llmfacade-feature-request-n-cpu-moe.md  llmfacade-feature-request-slot-cache.md  llmfacade-feature-request-vision.md  llmfacade-multi-variant-bug.md  managed-localimage-sd-server.md  repetition-detect-thinking.md  repetition-detection.md  stream-incremental-tool-args.md  tool-result-images.md  vision-capability-flag.md
src/llmfacade/: __init__.py  _html_log.py  _image_log.py  cache.py  conversation.py  exceptions.py  facade.py  helpers.py  image.py  model.py  models.py  provider.py  repetition.py  settings.py  tools.py
src/llmfacade/providers/: __init__.py  _gguf.py  _launch.py  _openai_chat.py  _openai_images.py  _sd_launch.py  _sd_lifecycle.py  _swap_lifecycle.py  anthropic.py  google.py  llamacpp.py  localimage.py  ollama.py  openai.py
testapp/: dnd_gift.py  probe_swap_introspection.py
tests/: conftest.py  test_anthropic_effort.py  test_anthropic_stream_tool_args.py  test_async.py  test_blocks.py  test_caching.py  test_capabilities.py  test_conversation.py  test_conversation_slots.py  test_facade.py  test_gguf.py  test_google_provider.py  test_html_log.py  test_image_generation.py  test_image_logging.py  test_llamacpp.py  test_llamacpp_supervisor.py  test_llamacpp_swap_yaml.py  test_localimage_supervisor.py  test_ollama_finish_reason.py  test_openai.py  test_openai_chat_shared.py  test_repetition.py  test_response_cache.py  test_sd_launch.py  test_thinking.py  test_token_counting.py  test_tool_choice.py  test_tools.py  test_vision.py
tests/integration/: conftest.py  test_anthropic_live.py  test_google_live.py  test_image_generation_live.py  test_llamacpp_autofit_live.py  test_llamacpp_live.py  test_llamacpp_swap_live.py  test_ollama_live.py  test_openai_live.py
