[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmfacade"
version = "0.1.0"
description = "A lean, unified Python interface to multiple LLM providers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.97"]
openai = ["openai>=2.32"]
google = ["google-genai>=1.73"]
ollama = ["ollama>=0.6"]
all = ["anthropic>=0.97", "openai>=2.32", "google-genai>=1.73", "ollama>=0.6"]
# Local tokenizers used by Provider.count_tokens / Model.count_tokens and
# the cache_summary boundary fallback. tiktoken covers OpenAI; sentencepiece
# (via google-genai's [local-tokenizer]) covers Gemini 2.0+. Anthropic and
# Ollama have no offline tokenizer and stay on chars/4.
tokenizers = [
    "tiktoken>=0.7",
    "google-genai[local-tokenizer]>=1.73",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "python-dotenv>=1.0",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llmfacade"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: live tests that hit real provider APIs (opt-in, costs money)",
]
addopts = "-m 'not integration'"

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
